Fix products layout

--- a/products.html
+++ b/products.html
@@ -39,6 +39,34 @@
     </nav>
     <!-- Navbar Ends -->
 
+    <div class="container product-container">
+        <div class="row row-1">
+            <div class="col-md-7">
+                <div class="box-1">
+
+                </div> <!-- box-1 -->
+            </div> <!-- col-md-7 -->
+            <div class="col-md-5">
+                <div class="row">
+                    <div class="box-2">
+
+                    </div> <!-- box-2 -->
+                </div> <!-- row -->
+                <div class="row">
+                    <div class="box-3">
+
+                    </div> <!-- box-3 -->
+                </div> <!-- row -->
+            </div> <!-- col-md-5 -->
+        </div> <!-- row -->
+        <div class="row row-2">
+            <div class="col-md-12">
+                <div class="box-4">
+
+                </div> <!-- box-4 -->
+            </div> <!-- col-md-12 -->
+        </div> <!-- row -->
+    </div> <!-- container-fluid -->
 
     <!-- JavaScript Files -->
     <script src="assets/js/jquery-3.4.1.min.js"></script>
