Decide about layout

--- a/about.html
+++ b/about.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
 
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+
 </head>
 <body>
     <!-- Navbar Begins -->
@@ -39,6 +41,75 @@
     </nav>
     <!-- Navbar Ends -->
 
+    <div class="container about-container">
+        <h1>ABOUT US</h1>
+        <p>
+            Established in 2017, G'Xtron is the brainchild of a team of technical enthusiasts aspiring to provide creative and innovative services which comprise the hardware/software development, 3D printer, home automation, and much more. Combining technology innovation, deep industry, and business process expertise, G'Xtron strives for client satisfaction and product innovation and to present the industry with a potential workforce that embodies the future of work. <br>
+        </p>
+        <p style="padding-bottom:3rem;">
+            Established in 2017, G'Xtron is the brainchild of a team of technical enthusiasts aspiring to provide creative and innovative services which comprise the hardware/software development, 3D printer, home automation, and much more. Combining technology innovation, deep industry, and business process expertise, G'Xtron strives for client satisfaction and product innovation and to present the industry with a potential workforce that embodies the future of work.
+        </p>
+
+        <h1>Meet the team</h1>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="hovereffect">
+                    <img src="assets/img/neeraj.png" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <div class="overlay">
+                        <h2>Neeraj P M<br>
+                        Chief Executive Officer</h2>
+                    </div>
+                </div> <!-- hovereffect -->
+            </div> <!-- col-md-4 -->
+            <div class="col-md-4">
+                <div class="hovereffect">
+                    <img src="assets/img/rahul.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <div class="overlay">
+                        <h2>Rahul Suresh<br>
+                        Chief Operating Officer</h2>
+                    </div>
+                </div> <!-- hovereffect -->
+            </div> <!-- col-md-4 -->
+            <div class="col-md-4">
+                <div class="hovereffect">
+                    <img src="assets/img/rythin.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <div class="overlay">
+                        <h2>Rythin Nambiar<br>
+                        Chief Financial Officer</h2>
+                    </div>
+                </div> <!-- hovereffect -->
+            </div> <!-- col-md-4 -->
+        </div> <!-- row -->
+        <div class="row">
+            <div class="col-md-4">
+                <div class="hovereffect">
+                    <img src="assets/img/nevil.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <div class="overlay">
+                        <h2>Nevil Chandy Alex<br>
+                        Chief Technical Officer</h2>
+                    </div>
+                </div> <!-- hovereffect -->
+            </div> <!-- col-md-4 -->
+            <div class="col-md-4">
+                <div class="hovereffect">
+                    <img src="assets/img/rythin.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <div class="overlay">
+                        <h2>Rahul Suresh<br>
+                        Chief Operating Officer</h2>
+                    </div>
+                </div> <!-- hovereffect -->
+            </div> <!-- col-md-4 -->
+            <div class="col-md-4">
+                <div class="hovereffect">
+                    <img src="assets/img/rahul.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <div class="overlay">
+                        <h2>Rythin Nambiar<br>
+                        Chief Financial Officer</h2>
+                    </div>
+                </div> <!-- hovereffect -->
+            </div> <!-- col-md-4 -->
+        </div> <!-- row -->
+    </div> <!-- container -->
 
     <!-- JavaScript Files -->
     <script src="assets/js/jquery-3.4.1.min.js"></script>
