Add services content

--- a/products.html
+++ b/products.html
@@ -208,6 +208,12 @@
         </div> <!-- modal-dialog -->
     </div> <!-- modal -->
 
+    <footer class="footer">
+        <div class="container">
+            <!--<p class="text-muted">Place sticky footer content here.</p>-->
+        </div>
+    </footer>
+
     <!-- JavaScript Files -->
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
