--- a/services.html
+++ b/services.html
@@ -39,6 +39,28 @@
     </nav>
     <!-- Navbar Ends -->
 
+    <div class="container services-container">
+        <h2>ELECTRONIC HARDWARE DEVELOPMENT</h2>
+        <p>
+            We design and develop electronic hardware products, providing continuous support from initial design concepts, through the prototype and pre-production stages, right up to and including product launch and manufacture.
+        </p>
+
+        <h2>VR WALKTHROUGH</h2>
+        <p>
+            We design and develop electronic hardware products, providing continuous support from initial design concepts, through the prototype and pre-production stages, right up to and including product launch and manufacture.
+        </p>
+
+        <h2>Custom Software Development</h2>
+        <p>
+            We design and develop electronic hardware products, providing continuous support from initial design concepts, through the prototype and pre-production stages, right up to and including product launch and manufacture.
+        </p>
+    </div> <!-- container -->
+
+    <footer class="footer">
+        <div class="container">
+            <!--<p class="text-muted">Place sticky footer content here.</p>-->
+        </div>
+    </footer>
 
     <!-- JavaScript Files -->
     <script src="assets/js/jquery-3.4.1.min.js"></script>
