--- a/about.html
+++ b/about.html
@@ -111,6 +111,12 @@
         </div> <!-- row -->
     </div> <!-- container -->
 
+    <footer class="footer">
+        <div class="container">
+            <!--<p class="text-muted">Place sticky footer content here.</p>-->
+        </div>
+    </footer>
+
     <!-- JavaScript Files -->
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
