--- a/contact.html
+++ b/contact.html
@@ -133,6 +133,12 @@
         </div> <!-- row -->
     </div> <!-- container -->
 
+    <footer class="footer">
+        <div class="container">
+            <!--<p class="text-muted">Place sticky footer content here.</p>-->
+        </div>
+    </footer>
+
     <!-- JavaScript Files -->
     <script>
         function initMap() {
