--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">The Logo</a>
+                <a class="navbar-brand" href="index.html"><img src="assets/img/logo_1.png" class="img-responsive" alt="Responsive image"></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-right" id="navbar-collapse-1">
@@ -45,7 +45,7 @@
                 <div class="box-1">
                     <div class="text-uppercase vcenter">
                         <h1>Iris </h1>
-                        <h3>Secondary text</h3>
+                        <!--<h3>Secondary text</h3>-->
                     </div>
                 </div> <!-- box-1 -->
             </div> <!-- col-md-7 -->
@@ -54,7 +54,6 @@
                     <div class="box-2">
                         <div class="text-uppercase vcenter">
                             <h1>RFID Entry Exit Logger</h1>
-                            <h3>Secondary text</h3>
                         </div>
                     </div> <!-- box-2 -->
                 </div> <!-- row -->
@@ -62,7 +61,6 @@
                     <div class="box-3">
                         <div class="vcenter">
                             <h1>Data Logger</h1>
-                            <h3>Secondary text</h3>
                         </div>
                     </div> <!-- box-3 -->
                 </div> <!-- row -->
@@ -73,7 +71,6 @@
                 <div class="box-4">
                     <div class="text-uppercase vcenter">
                         <h1>Home Automation</h1>
-                        <h3>Secondary text</h3>
                     </div>
                 </div> <!-- box-4 -->
             </div> <!-- col-md-12 -->
