--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">The Logo</a>
+                <a class="navbar-brand" href="index.html"><img src="assets/img/logo_1.png" class="img-responsive" alt="Responsive image"></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-right" id="navbar-collapse-1">
