--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
 
         <h2>VR WALKTHROUGH</h2>
         <p>
-            We design and develop electronic hardware products, providing continuous support from initial design concepts, through the prototype and pre-production stages, right up to and including product launch and manufacture.
+            A virtual walkthrough is a moving representation of a place, such as a building. This building can be an actual building, a building under construction, or a planned building in development. We will be designing the interiors of the building and a VR Walktrough of the building will be given to the customers.
         </p>
 
         <h2>Custom Software Development</h2>
