--- a/about.html
+++ b/about.html
@@ -94,8 +94,8 @@
                 <div class="hovereffect">
                     <img src="assets/img/rythin.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
                     <div class="overlay">
-                        <h2>Rahul Suresh<br>
-                        Chief Operating Officer</h2>
+                        <h2>Sidhanath T S<br>
+                        Chief Design Officer</h2>
                     </div>
                 </div> <!-- hovereffect -->
             </div> <!-- col-md-4 -->
@@ -103,8 +103,8 @@
                 <div class="hovereffect">
                     <img src="assets/img/rahul.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
                     <div class="overlay">
-                        <h2>Rythin Nambiar<br>
-                        Chief Financial Officer</h2>
+                        <h2>Hareesh Sreedharan<br>
+                        Multimedia Head</h2>
                     </div>
                 </div> <!-- hovereffect -->
             </div> <!-- col-md-4 -->
