Fix homepage horizontal scroll

--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
             </div> <!-- col-md-4 -->
             <div class="col-md-4">
                 <div class="hovereffect">
-                    <img src="assets/img/rahul.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <img src="assets/img/hareesh.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
                     <div class="overlay">
                         <h2>Hareesh Sreedharan<br>
                         Multimedia Head</h2>
