--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="hovereffect">
-                    <img src="assets/img/neeraj.png" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <img src="assets/img/team/neeraj.png" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
                     <div class="overlay">
                         <h2>Neeraj P M<br>
                         Chief Executive Officer</h2>
@@ -63,7 +63,7 @@
             </div> <!-- col-md-4 -->
             <div class="col-md-4">
                 <div class="hovereffect">
-                    <img src="assets/img/rahul.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <img src="assets/img/team/rahul.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
                     <div class="overlay">
                         <h2>Rahul Suresh<br>
                         Chief Operating Officer</h2>
@@ -72,7 +72,7 @@
             </div> <!-- col-md-4 -->
             <div class="col-md-4">
                 <div class="hovereffect">
-                    <img src="assets/img/rythin.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <img src="assets/img/team/rythin.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
                     <div class="overlay">
                         <h2>Rythin Nambiar<br>
                         Chief Financial Officer</h2>
@@ -83,7 +83,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="hovereffect">
-                    <img src="assets/img/nevil.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <img src="assets/img/team/nevil.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
                     <div class="overlay">
                         <h2>Nevil Chandy Alex<br>
                         Chief Technical Officer</h2>
@@ -92,7 +92,7 @@
             </div> <!-- col-md-4 -->
             <div class="col-md-4">
                 <div class="hovereffect">
-                    <img src="assets/img/rythin.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <img src="assets/img/team/rythin.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
                     <div class="overlay">
                         <h2>Sidhanath T S<br>
                         Chief Design Officer</h2>
@@ -101,7 +101,7 @@
             </div> <!-- col-md-4 -->
             <div class="col-md-4">
                 <div class="hovereffect">
-                    <img src="assets/img/hareesh.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <img src="assets/img/team/hareesh.jpeg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
                     <div class="overlay">
                         <h2>Hareesh Sreedharan<br>
                         Multimedia Head</h2>
