--- a/products.html
+++ b/products.html
@@ -103,15 +103,15 @@
                 </div>
                 <div class="modal-body">
                     <img src="assets/img/products/RFID.jpg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
-                    <p>RFID is an acronym for “radio-frequency identification” and refers to a technology whereby digital data encoded in RFID tags or smart labels (defined below) are captured by a reader via radio waves.
-
-We foresees vast growth opportunities in the RFID sector, especially in the following six major vertical markets:
-
-*Security and Access Control Retail
-
-*Consumer Products-healthcare *Pharmaceuticals Logistics
-
-*Transportation Hi-tech Manufacturing *Automobile Industry.
+                    <p>RFID is an acronym for “radio-frequency identification” and refers to a technology whereby digital data encoded in RFID tags or smart labels (defined below) are captured by a reader via radio waves. </p>
+                    <p>We foresee vast growth opportunities in the RFID sector, especially in the following six major vertical markets:
+                        <ul>
+                            <li>Security and Access Control Retail</li>
+                            <li>Consumer Products-healthcare</li>
+                            <li>Pharmaceuticals Logistics</li>
+                            <li>Transportation Hi-tech Manufacturing</li>
+                            <li>Automobile Industry</li>
+                        </ul>
                     </p>
                 </div>
             </div> <!-- modal-content -->
@@ -161,9 +161,7 @@ We foresees vast growth opportunities in the RFID sector, especially in the foll
                 </div>
                 <div class="modal-body">
                     <img src="assets/img/products/homeauto.jpg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
-                    <p>Control Everything at Your Fingertips Turns on your lights, play your favorite music or change your room temperature, at the tap of your smartphone.
-
-Run Personalized Schedules, Have your coffee ready when you wake up. Automatically turn everything off when you leave for work. Experience true intelligence.
+                    <p>Control Everything at Your Fingertips Turns on your lights, play your favorite music or change your room temperature, at the tap of your smartphone. Run Personalized Schedules, Have your coffee ready when you wake up. Automatically turn everything off when you leave for work. Experience true intelligence.
                     </p>
                 </div>
             </div> <!-- modal-content -->
