Change homepage and about layout

--- a/products.html
+++ b/products.html
@@ -127,7 +127,7 @@
                     <h4 class="modal-title">Data Logger</h4>
                 </div>
                 <div class="modal-body">
-                    <img src="assets/img/products/homeauto.jpg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <img src="assets/img/products/iot.jpg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo pariatur facilis molestiae recusandae vel facere et magnam praesentium veniam numquam eius distinctio dicta nostrum voluptatum doloribus. Optio quidem voluptatum quaerat.</p>
                     <p>Tempore quas omnis a suscipit doloremque voluptatibus sit non aliquid at accusamus quam vero culpa quisquam aut placeat vel odit. Pariatur architecto placeat nesciunt eveniet dolore eius voluptatibus ab fuga.</p>
                     <p>Necessitatibus deleniti incidunt rerum quia magni quidem cum sequi veritatis nostrum aliquam sapiente blanditiis laudantium nobis atque ab ipsum temporibus qui! Nihil eligendi fuga aliquam ullam voluptates pariatur ducimus delectus.</p>
@@ -160,7 +160,7 @@
                     <h4 class="modal-title">Home Automation</h4>
                 </div>
                 <div class="modal-body">
-                    <img src="assets/img/products/homeauto.jpg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+                    <img src="assets/img/products/iot.jpg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
                     <p>Control Everything at Your Fingertips Turns on your lights, play your favorite music or change your room temperature, at the tap of your smartphone. Run Personalized Schedules, Have your coffee ready when you wake up. Automatically turn everything off when you leave for work. Experience true intelligence.
                     </p>
                 </div>
