--- a/services.html
+++ b/services.html
@@ -41,25 +41,25 @@
 
     <div class="container services-container">
         <div class="row">
-            <h2>ELECTRONIC HARDWARE DEVELOPMENT</h2>
-            <div class="col-md-7">
+            <div class="col-md-8">
+                <h2>ELECTRONIC HARDWARE DEVELOPMENT</h2>
                 <p>
                     We design and develop electronic hardware products, providing continuous support from initial design concepts, through the prototype and pre-production stages, right up to and including product launch and manufacture.
                 </p>
             </div> <!-- col-md-8 -->
-            <div class="col-md-5">
-                <img src="assets/img/services/EE-comp-BEng-ind.jpg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+            <div class="col-md-4">
+                <img src="assets/img/services/hardware.jpg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
             </div> <!-- col-md-4 -->
         </div> <!-- row -->
 
         <hr>
 
         <div class="row">
-            <h2>VR WALKTHROUGH</h2>
-            <div class="col-md-5">
-                <img src="assets/img/services/Virtual_Reality_VR_Gaming.jpg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
+            <div class="col-md-4">
+                <img src="assets/img/services/VR.jpg" alt="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
             </div> <!-- col-md-4 -->
-            <div class="col-md-7">
+            <div class="col-md-8">
+                <h2>VR WALKTHROUGH</h2>
                 <p>
                     A virtual walkthrough is a moving representation of a place, such as a building. This building can be an actual building, a building under construction, or a planned building in development. We will be designing the interiors of the building and a VR Walktrough of the building will be given to the customers.
                 </p>
@@ -69,13 +69,13 @@
         <hr>
 
         <div class="row">
-            <h2>Custom Software Development</h2>
-            <div class="col-md-7">
+            <div class="col-md-8">
+                <h2>Custom Software Development</h2>
                 <p>
                     We design and develop electronic hardware products, providing continuous support from initial design concepts, through the prototype and pre-production stages, right up to and including product launch and manufacture.
                 </p>
             </div> <!-- col-md-8 -->
-            <div  class="col-md-5">
+            <div  class="col-md-4">
                 <img src="https://bulma.io/images/placeholders/1280x960.png" class="img-responsive" alt="Responsive image">
             </div> <!-- col-md-4 -->
         </div> <!-- row -->
