--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
             <div class="collapse navbar-collapse navbar-right" id="navbar-collapse-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li><a href="about.html">About Us</a><span class="hover"></span></li>
+                    <li><a href="about.html">Team</a><span class="hover"></span></li>
                     <li><a href="services.html">Services</a><span class="hover"></span></li>
                     <li><a href="products.html">Products</a><span class="hover"></span></li>
                     <li><a href="contact.html">Contact Us</a><span class="hover"></span></li>
