--- a/index.html
+++ b/index.html
@@ -13,17 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
 
-    <!--
-    <style>
-        svg {
-            width:70%;
-            height:50%;
-            margin-top: 10% !important;
-            margin-left: 10rem;
-            visibility:hidden;
-        }
-    </style>
-    -->
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 
 </head>
 <body>
@@ -43,7 +33,7 @@
 
             <div class="collapse navbar-collapse navbar-right" id="navbar-collapse-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li><a href="about.html">About Us</a><span class="hover"></span></li>
+                    <li><a href="about.html">Team</a><span class="hover"></span></li>
                     <li><a href="services.html">Services</a><span class="hover"></span></li>
                     <li><a href="products.html">Products</a><span class="hover"></span></li>
                     <li><a href="contact.html">Contact Us</a><span class="hover"></span></li>
@@ -95,7 +85,25 @@
 
     <footer class="footer">
         <div class="container">
-            <!--<p class="text-muted">Place sticky footer content here.</p>-->
+            <!--
+            <p>
+                        <span><a href="https://www.facebook.com/gxtron6/" target="_blank">
+                            <i class="fab fa-facebook-f fa-2x"></i>
+                        </a></span>
+                        <span><a href="https://twitter.com/g_xtron" target="_blank">
+                            <i class="fab fa-twitter fa-2x"></i>
+                        </a></span>
+                        <span><a href="https://www.instagram.com/gxtroninnovations/" target="_blank">
+                            <i class="fab fa-instagram fa-2x"></i>
+                        </a></span>
+                        <span><a href="https://www.pinterest.com/gxtrons/" target="_blank">
+                            <i class="fab fa-pinterest fa-2x"></i>
+                        </a></span>
+                        <span><a href="https://www.youtube.com/channel/UCLx4tlC_x9DH-68TQ-vRxZw?view_as=public" target="_blank">
+                            <i class="fab fa-youtube fa-2x"></i>
+                        </a><span>
+                    </p>
+                    -->
         </div>
     </footer>
 
